fixed spacing of buttons on homepage

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,8 @@ body {
 }
 #subtitle{
 	text-align: center;
-	font-size: 80%;
+	padding-top: 10px;
+	font-size: 90%;
 }
 
 #counter{
@@ -53,23 +54,18 @@ body {
 	font-size: 1.5vw;
 }
 
-#table{
-	margin: 0 auto;
-/*	margin-left: 5px;
-*/}
-
 .button{
 	background-color: #bcdee0;
 	border: none;
 	text-align: center;
 	font-size: 20px;
 	height: 40px;
-	width: 140px;
-	padding: 5px 15px;
+	width: 50%;
+	/*padding: 5px 15px;*/
 	display: flex;
 	justify-content: space-around;
-	/*display: block;*/
-	margin: 30px 90px;
+	/*margin: 30px 90px;*/
+	margin: 30px;
 	transition: 0.3s;
 }
 .button:hover {
@@ -86,5 +82,8 @@ body {
 	text-align: center;
 }
 
+.container{
+	text-align: center;
+}
 
 
